--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI="
   crossorigin="anonymous"></script>
     <script src="app.js" type="module"></script>
-    <title>Piller András</title>
+    <title>Ulrich Bence</title>
 </head>
 <body>
     <main></main>
